test/corpus/headers.txt
====================
Header branch oid sha1
====================

# branch.oid 0000000000

---

(source_file
	(header_definition
		(header_type 
			(branch
				(oid (sha1))))))

====================
Header branch oid initial
====================

# branch.oid (initial)

---

(source_file
	(header_definition
		(header_type 
			(branch (oid )))))

====================
Header branch head branch_name
====================

# branch.head master

---

(source_file
	(header_definition
		(header_type 
			(branch
				(head (branch_name))))))

====================
Header branch head detached
====================

# branch.head (detached)

---

(source_file
	(header_definition
		(header_type 
			(branch (head)))))

====================
Header branch upstream
====================

# branch.upstream origin/master

---

(source_file
	(header_definition
		(header_type 
			(branch
				(upstream (upstream_branch))))))

====================
Header branch ab
====================

# branch.ab +0 -4

---

(source_file
	(header_definition
		(header_type 
			(branch
				(ab (ahead) (behind))))))
